--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -1,6 +1,16 @@
 {% extends 'base.html' %}
 
 {% block content %}
+  <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <div class="container-fluid d-flex justify-content-between">
+      <a class="navbar-brand" href="#">{{ name }}</a>
+      <div class="" id="navbarSupportedContent">
+        <a class="nav-link active" aria-current="page" href="{% url 'main:logout' %}">
+          <button class="btn btn-outline-success float-right" type="submit">Logout</button>
+        </a>
+      </div>
+    </div>
+  </nav>
   <h1>Shopping List Page</h1>
 
   <h5>Name: </h5>
@@ -25,6 +35,18 @@
         <td>{{ product.price }}</td>
         <td>{{ product.description }}</td>
         <td>{{ product.date_added }}</td>
+        <td>
+          <a href="{% url 'main:edit_product' product.pk %}">
+            <button>
+              Edit
+            </button>
+          </a>
+          <a href="{% url 'main:delete_product' product.pk %}">
+            <button>
+              Delete
+            </button>
+          </a>
+        </td>
       </tr>
     {% endfor %}
   </table>
